2005-06-27	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c(terminal_window_screen_removed,
	  terminal_window_add): Don't give focus to the notebook tabs, fixes
	  bug #93.

2005-06-27	Benedikt Meurer <benny@xfce.org>

	* po/it.po, THANKS, configure.ac, terminal/terminal-window.c: Add
	  it translations, thanks to Vittorio Palmisano <redclay@email.it>.

2005-06-13	Benedikt Meurer <benny@xfce.org>

	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.

2005-06-12	Benedikt Meurer <benny@xfce.org>

	* TerminalHelp.in: Apply Daichi's patch to remove extra apostrophe. This
	  fixes bug #90.

2005-06-11	Benedikt Meurer <benny@xfce.org>

	* terminal/main.c: Apply Daichi's patch to fix the encoding related
	  problems with the --help output. This fixes #72.

2005-06-11	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences.c, terminal/terminal-screen.c: Apply
	  mouse autohide patch from Kir Kolyshkin <kir@sacred.ru>. This fixes
	  bug #88.
	* THANKS: Add Kir Kolyshkin <kir@sacred.ru> here.
	* doc/C/Terminal.xml.in: Add documentation for the new hidden option
	  MiscMouseAutohide.

2005-06-11	Benedikt Meurer <benny@xfce.org>

	* THANKS, configure.ac, po/hu.po, terminal/terminal-window.c: Add hu
	  translations, thanks to Szervác Attila <sas@321.hu>.
	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.

2005-03-24	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c: Work-around the problem where
	  gtk_ui_manager_get_widget() does return a valid widget, which
	  is not a GtkMenuItem.

2005-03-19	Benedikt Meurer <benny@xfce.org>

	* configure.ac, NEWS: Bump version to 0.2.5cvs.
	* po/: Sync with source file changes.
	* terminal/terminal-shortcut-editor.c, terminal/terminal-preferences.c:
	  Allow users to assign a keyboard shortcut to open the Preferred
	  Applications dialog.