@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=balsa
 _Name=Balsa
 Type=Application
