@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=web-browser
 _Name=Epiphany Web Browser
 Type=Application
