@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=evolution
 _Name=Novell Evolution
 Type=Application
