@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=firefox
 _Name=Mozilla Firefox
 Type=Application
