@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=galeon
 _Name=Galeon Web Browser
 Type=Application
