@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=kmail
 _Name=KMail
 Type=Application
