@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=konqueror
 _Name=Konqueror
 Type=Application
