@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=lynx
 _Name=Lynx
 Type=Application
