@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=mozilla
 _Name=Mozilla Browser
 Type=Application
