@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=mutt
 _Name=Mutt
 Type=Application
