@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=opera
 _Name=Opera Browser
 Type=Application
