@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=debian
 _Name=Debian Sensible Browser
 Type=Application
