@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 Icon=thunderbird
 _Name=Mozilla Thunderbird
 Type=Application
